1265: fix jumping tab-title and adjust tab-style

--- a/features/polyExplorer/src/screens/entityDetails/entityDetails.css
+++ b/features/polyExplorer/src/screens/entityDetails/entityDetails.css
@@ -38,7 +38,6 @@
     background-color: var(--color-background-dark);
     flex: 1 1 0px;
     height: 100%;
-    padding-top: 8px;
     padding-bottom: 8px;
     font-family: "Jost Medium";
     font-size: 14px;
@@ -46,10 +45,12 @@
     color: var(--color-medium);
     border-color: transparent;
     outline: none;
+    border: 4px solid var(--transparent);
 }
 
 .tab-button-container .tab-button.active {
-    border-bottom: 4px solid var(--color-semi-light);
+    border: 4px solid var(--transparent);
+    border-bottom: 4px solid var(--color-light);
     color: var(--color-text-light);
 }
 
